syntax = "proto3";

package elca.ntig.partnerapp.common.proto;

option java_multiple_files = true;
option java_package = "elca.ntig.partnerapp.common.proto.utils";

message LocalDate {
  uint32 day = 1;
  uint32 month = 2;
  uint32 year = 3;
}
